--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Order the freshest Croissant" />
     <link rel="stylesheet" href="src/styles.css" />
     <title>Croissant</title>
   </head>
@@ -19,6 +20,15 @@
       rolled into a thin sheet, in a technique called laminating. The process
       results in a layered, flaky texture, similar to a puff pastry.
     </h2>
+
+    <h3>
+      Learn more on
+      <a
+        href="https://en.wikipedia.org/wiki/Croissant"
+        title="Wikipedia website"
+        >Wikipedia</a
+      >
+    </h3>
 
     <div class="container">
       <div class="row">
