--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,13 @@
     <h1>Croissant 🥐</h1>
     <p>
       To contact croissant.com, please email us at
-      <a href="mailto:hello@croissant.com">hello@croissant.com</a> for more info
+      <a
+        href="mailto:hello@croissant.com"
+        title="Contact us by email"
+        target="_blank"
+        >hello@croissant.com</a
+      >
+      for more info
     </p>
     <div class="container">
       <div class="row">
