--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <a
         href="https://en.wikipedia.org/wiki/Croissant"
         title="Wikipedia website"
+        target="_blank"
         >Wikipedia</a
       >
     </h3>
@@ -33,7 +34,7 @@
     <div class="container">
       <div class="row">
         <div class="col-4">
-          <a href="#">Homepage</a>
+          <a href="index.html">Homepage</a>
         </div>
         <div class="col-4"><a href="photo.html">Photo</a></div>
         <div class="col-4"><a href="contact.html">Contact us</a></div>
