description tag added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   </head>
   <body>
     <h1>Croissant 🥐</h1>
-    <h2>
+    <h2>Order the Freshest Croissant</h2>
+    <h3>
       A croissant is a buttery, flaky, Austrian viennoiserie pastry inspired by
       the shape of the Austrian kipferl but using the French yeast-leavened
       laminated dough. <br />
@@ -19,9 +20,9 @@
       layered with butter, rolled and folded several times in succession, then
       rolled into a thin sheet, in a technique called laminating. The process
       results in a layered, flaky texture, similar to a puff pastry.
-    </h2>
+    </h3>
 
-    <h3>
+    <h4>
       Learn more on
       <a
         href="https://en.wikipedia.org/wiki/Croissant"
@@ -29,7 +30,7 @@
         target="_blank"
         >Wikipedia</a
       >
-    </h3>
+    </h4>
 
     <div class="container">
       <div class="row">
