--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Order the freshest Croissant" />
     <link rel="stylesheet" href="src/styles.css" />
     <title>Contact us</title>
   </head>
   <body>
     <h1>Croissant 🥐</h1>
-    <p>
+    <p class="contact">
       To contact croissant.com, please email us at
       <a
         href="mailto:hello@croissant.com"
@@ -17,7 +18,6 @@
         target="_blank"
         >hello@croissant.com</a
       >
-      for more info
     </p>
     <div class="container">
       <div class="row">
